tests/typing/good/testfile-subtype-2.c

int main() {
  char *s;
  s = 0;
}
