tests/typing/bad/testfile-subscript-4.c

void foo() {}
int main() { (foo())[1]; }

